feat: implement sticker exif manipulation
- refactor code
